# Similar-Tickets

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.md  config.json.example  dev-requirements.txt  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
serve/: Dockerfile  entrypoint.sh
src/: ann_index.py  config.py  logging_setup.py  main.py  monitoring.py  review_console.py  webhook_server.py
src/freshservice/: freshservice_client.py
src/similarity/: ticket_similarity.py  ticket_trainer.py
tests/: conftest.py  test_ann_reload.py  test_config.py  test_config_validation.py  test_daily_duplicates.py  test_daily_job.py  test_fetch_tickets.py  test_main.py  test_metrics.py  test_self_merge.py  test_snapshot_datetime.py  test_webhook.py  test_webhook_auth.py
trainer/: Dockerfile  train_freshservice.py
